# ml-drift-monitor

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.dashboard  LICENSE  Makefile  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt
dashboard/: app.py  index.html
dashboard/assets/: dashboard.js
notebooks/: exploration.ipynb
src/: __init__.py  monitor.py  simulate_drift.py  train.py
src/adapters/: config_repo.py  data_repo.py  drift_analyser.py  metrics_repo.py  model_repo.py
src/domain/: entities.py  ports.py
src/infrastructure/: api.py
src/use_cases/: monitor_drift.py  simulate_drift.py  train_model.py
tests/: test_monitor.py  test_simulate_drift.py
